--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,2 +1,7 @@
-h1 Welcome#index
-p Find me in app/views/welcome/index.html.slim
+javascript:
+  function hora() {
+      alert("ほら話しかけた");
+  }
+
+button onclick="hora()" 
+  i.fa.fa-microphone
