--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -1,3 +1,30 @@
-// Place all the styles related to the welcome controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+
+@charset "utf-8";
+html{
+  background: image-url("1.jpg") center center / cover no-repeat fixed;
+}
+i{
+  font-size: 1000px;
+}
+button {
+  display: inline-block;
+  margin: auto;
+  position: absolute;
+  bottom: 30%;
+  text-align: center;
+  cursor: pointer;
+  width: 70%;
+  max-width: 300px;
+  margin: 0 15%;
+  padding: 10px 0;
+  border: none;
+  border-radius:100%;
+  height: 100px;
+  width: 100px;
+  border: solid 3px #fff;
+  background: none;
+  font-size: 200px;
+  &:hover{
+    opacity: .8;
+  }
+}
