--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -3,28 +3,24 @@
 html{
   background: image-url("1.jpg") center center / cover no-repeat fixed;
 }
-i{
-  font-size: 1000px;
-}
 button {
+  outline:none;
   display: inline-block;
   margin: auto;
   position: absolute;
-  bottom: 30%;
+  bottom: 50%;
+  left: 50%;
+  margin: -50px 0 0 -50px;
   text-align: center;
   cursor: pointer;
-  width: 70%;
-  max-width: 300px;
-  margin: 0 15%;
-  padding: 10px 0;
-  border: none;
   border-radius:100%;
   height: 100px;
   width: 100px;
-  border: solid 3px #fff;
+  border: solid 2px #fff;
   background: none;
-  font-size: 200px;
+  font-size: 50px;
+  color: #fff;
   &:hover{
-    opacity: .8;
+    background: rgba(255,255,255,0.5);
   }
 }
