--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -18,8 +18,8 @@ button {
   width: 100px;
   border: solid 2px #fff;
   background: none;
-  font-size: 50px;
   color: #fff;
+  text-align: center;
   &:hover{
     background: rgba(255,255,255,0.5);
   }
