--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -2,6 +2,9 @@ javascript:
   function hora() {
       alert("ほら話しかけた");
   }
+  
+  
+h1 勇気を出して話しかけてみて
 
 button onclick="hora()" 
   i.fa.fa-microphone.fa-4x
