--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,10 +1,7 @@
-javascript:
-  function hora() {
-      alert("ほら話しかけた");
-  }
-  
-  
 h1 勇気を出して話しかけてみて
 
-button onclick="hora()" 
+button#greet rel="leanModal"
   i.fa.fa-microphone.fa-4x
+
+/modalウインドウ
+= render "shared/modal"
