--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -1,7 +1,16 @@
 
 @charset "utf-8";
-html{
-  background: image-url("1.jpg") center center / cover no-repeat fixed;
+.bijin-wafuku{
+  background: image-url("bijin-wafuku.jpg") center center / cover no-repeat fixed;
+}
+.bijin-fune{
+  background: image-url("bijin-fune.jpg") center center / cover no-repeat fixed;
+}
+.bijin-kouen{
+  background: image-url("bijin-kouen.jpg") center center / cover no-repeat fixed;
+}
+.bijin-mizugi{
+  background: image-url("bijin-mizugi.jpg") center center / cover no-repeat fixed;
 }
 h1{
   text-align: center;
