--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,7 +5,7 @@ html
     = stylesheet_link_tag "application", :media => "all", "data-turbolinks-track" => true
     = javascript_include_tag "application", "data-turbolinks-track" => true
     = csrf_meta_tags
-  body
+  body*{ class: ["bijin-wafuku" , "bijin-fune" , "bijin-kouen" , "bijin-mizugi"].sample}
     = yield
     = content_for :javascript
     = yield :bottom_script
