--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -14,13 +14,34 @@
 }
 h1{
   text-align: center;
-  line-height: 100px;
   font-size: 24px;
   font-weight: normal;
   color: #fff;
   text-shadow: 0 0px 2px #000;
   position: absolute;
   bottom: 30%;
+  left: 0;
+  width: 100%;
+}
+h2{
+  text-align: center;
+  font-size: 24px;
+  font-weight: normal;
+  color: #fff;
+  text-shadow: 0 0px 2px #000;
+  position: absolute;
+  top: 40%;
+  left: 0;
+  width: 100%;
+}
+p{
+  text-align: center;
+  font-size: 19px;
+  font-weight: normal;
+  color: #fff;
+  text-shadow: 0 0px 2px #000;
+  position: absolute;
+  bottom: 40%;
   left: 0;
   width: 100%;
 }
@@ -44,4 +65,15 @@ button {
   &:hover{
     background: rgba(255,255,255,0.5);
   }
+}
+
+#lean_overlay {
+    position: fixed;
+    z-index:100;
+    top: 0px;
+    left: 0px;
+    height:100%;
+    width:100%;
+    background: #000;
+    display: none;
 }
